--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -582,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's add the velocity vectors to the SSH plot."
+    "Now let's add the velocity vectors to the SSH plot. **Uncomment the last line to plot your velocity field.***"
    ]
   },
   {
@@ -617,7 +617,7 @@
     "plt.xlabel(\"Longitude [$^\\circ$E]\")\n",
     "plt.ylabel(\"Latitude [$^\\circ$N]\")\n",
     "plt.title(\"time = 2019-07-16\")\n",
-    "plt.quiver(lon[1:-1],lat[1:-1],u,v)"
+    "#plt.quiver(lon[1:-1],lat[1:-1],u,v)"
    ]
   },
   {
