changed one yaxis range and clarified question 5 code

--- a/PS1.ipynb
+++ b/PS1.ipynb
@@ -202,7 +202,7 @@
     "\n",
     "#set ylims\n",
     "axs[0].set_ylim([-0.5,0.5])\n",
-    "axs[1].set_ylim([-0.65,0.65])\n",
+    "axs[1].set_ylim([-0.9,0.9])\n",
     "axs[2].set_ylim([-1400,-900])\n",
     "\n",
     "#Set xlims\n",
@@ -244,25 +244,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the first part of the problem, we ask you to plot timeseries of Gulf Stream, Ekman, upper mid-ocean and overturning transports, low-pass filtered to smooth the data within a 3 month window.\n",
+    "In the first part of the problem, we ask you to plot timeseries of Gulf Stream, Ekman, upper mid-ocean and overturning transports.\n",
     "\n",
-    "To find the relevant variables, click the page icons next to each Data variable above.\n",
-    "\n",
-    "To smooth your selected variables, check out the [xarray rolling function](https://docs.xarray.dev/en/stable/generated/xarray.DataArray.rolling.html). Keep in mind that the orginal data is at 0.5 day resolution when selecting your window size."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## your code\n",
-    "# window = ##\n",
-    "# gs_3month_filter  = ###\n",
-    "# ek_3month_filter  = ###\n",
-    "# umo_3month_filter = ###\n",
-    "# moc_3month_filter = ###"
+    "To find the relevant variables, click the page icons next to each Data variable above."
    ]
   },
   {
@@ -310,7 +294,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The same functions may be used for part (c)."
+    "To smooth your selected variables, check out the [xarray rolling function](https://docs.xarray.dev/en/stable/generated/xarray.DataArray.rolling.html). Keep in mind that the orginal data is at 0.5 day resolution when selecting your window size."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## your code\n",
+    "# window = ##\n",
+    "# gs_3month_filter  = ###\n",
+    "# ek_3month_filter  = ###\n",
+    "# umo_3month_filter = ###\n",
+    "# moc_3month_filter = ###"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Correlations can then also be calculated between smoothed variables using linregress."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In part (c) we'll again be plotting and computing correlations, so the same suite of functions can be used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### your code ###"
    ]
   },
   {
